DEV-2: ui continue

--- a/src/AppBundle/Resources/views/Bets/list.html.twig
+++ b/src/AppBundle/Resources/views/Bets/list.html.twig
@@ -1,11 +1,15 @@
 {% extends 'AppBundle:Common:base.html.twig' %}
 {% block content %}
 <div class="content">
-    <div class="filters">
-
-    </div>
+    {% include 'AppBundle:Bets:filters.html.twig' %}
     <div class="bets-block">
+        <table>
+            <tr>
+                <th>
 
+                </th>
+            </tr>
+        </table>
     </div>
 </div>
 {% endblock %}
