--- a/src/AppBundle/Resources/views/Common/head.html.twig
+++ b/src/AppBundle/Resources/views/Common/head.html.twig
@@ -1,4 +1,6 @@
 <head>
     <title>{% block title 'DropDope' %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{ asset('public/styles.css') }}">
+    <script src="{{ asset('public/bundle-app.js') }}" type="text/javascript"></script>
 </head>
