--- a/web/assets/css/common/_header.scss
+++ b/web/assets/css/common/_header.scss
@@ -1,4 +1,13 @@
 .nav {
   width: 100%;
-  height: 30px;
+  height: 60px;
+  background-color: $blue;
+}
+
+.nav .brand {
+  color: $white;
+  font-size: 30px;
+  padding: 10px;
+  display: inline-block;
+  @include playfair;
 }
