--- a/web/assets/css/main.scss
+++ b/web/assets/css/main.scss
@@ -5,6 +5,7 @@
 /* mixins */
 @import 'common/mixins/border-radius';
 @import 'common/mixins/box-shadow';
+@import 'common/mixins/box-sizing';
 @import 'common/mixins/inline-block';
 @import 'common/mixins/fonts';
 
@@ -14,3 +15,8 @@
 
 @import 'common/footer';
 @import 'common/header';
+
+@import 'bet/row';
+
+@import 'filter/block';
+@import 'filter/element';
