DEV-2: more styles

--- a/src/AppBundle/Resources/views/Bets/filters.html.twig
+++ b/src/AppBundle/Resources/views/Bets/filters.html.twig
@@ -10,7 +10,10 @@
                 <span class="hyphen">-</span>
                 <div class="select-wrapper select-wrapper-half">
                     <select name="date_to">
-                        <option value="0">-</option>
+                        <option value="0">
+
+                            -
+                        </option>
                     </select>
                 </div>
             </div>
