--- a/web/assets/css/bet/_row.scss
+++ b/web/assets/css/bet/_row.scss
@@ -3,3 +3,14 @@
   width: 100%;
   background-color: $neutral-grey;
 }
+
+.bets .table-head {
+  background-color: $black;
+  color: $white;
+  height: 30px;
+  padding: 2px;
+}
+
+.bets {
+  text-align: center;
+}
