--- a/src/AppBundle/Resources/views/Bets/list.html.twig
+++ b/src/AppBundle/Resources/views/Bets/list.html.twig
@@ -3,11 +3,16 @@
 <div class="content">
     {% include 'AppBundle:Bets:filters.html.twig' %}
     <div class="bets-block">
-        <table>
+        <table class="bets">
             <tr>
-                <th>
-
-                </th>
+                <tr class="table-head">
+                    <td>Sport</td>
+                    <td>Chain</td>
+                    <td>Event</td>
+                    {% for type in coefficientTypes %}
+                        <td>{{ type.name }}</td>
+                    {% endfor %}
+                </tr>
             </tr>
         </table>
     </div>
