--- a/web/assets/css/common/_select.scss
+++ b/web/assets/css/common/_select.scss
@@ -22,24 +22,37 @@
   position: relative;
   margin: 10px 0 0 10px;
   width: 100%;
-  max-width: 200px;
+  max-width: 250px;
   min-width: 80px;
   height: 38px;
   display: inline-block;
   vertical-align: top;
   &:after {
     content: '';
+    color: $white;
+    width: 12px;
+    height: 25px;
     background: url('#{$images}/drop_icon.png') no-repeat left top;
-    width: 35px;
-    right: 0;
-    top: 0;
+    right: 10px;
+    top: 8px;
     padding: 0;
     position: absolute;
     pointer-events: none;
-    line-height: 38px;
+  }
+  &:before {
+    content: '';
+    right: 0;
+    top: 0;
+    width: 35px;
+    height: 38px;
+    background: $black;
+    position: absolute;
+    pointer-events: none;
+    display: block;
+    border-left: 1px solid #000;
   }
 }
 
 .select-wrapper-half {
-  width: 40%;
+  width: 42%;
 }
