--- a/web/assets/css/filter/_block.scss
+++ b/web/assets/css/filter/_block.scss
@@ -1,9 +1,9 @@
 .filters {
   width: 100%;
-  height: 200px;
   background-color: $neutral-grey;
+  padding: 10px 0 20px 0;
 }
 
 .filter-column {
-  max-width: 200px;
+  max-width: 250px;
 }
