--- a/web/assets/css/common/_select.scss
+++ b/web/assets/css/common/_select.scss
@@ -54,5 +54,11 @@
 }
 
 .select-wrapper-half {
-  width: 42%;
+  width: 46%;
+  margin-left: 0;
+}
+
+.select-wrapper-group {
+  margin-left: 10px;
+  width: 100%;
 }
