--- a/src/AppBundle/Resources/views/Bets/filters.html.twig
+++ b/src/AppBundle/Resources/views/Bets/filters.html.twig
@@ -1,38 +1,59 @@
 <div class="filters">
-    <div class="filter">
-        <div class="filter-column">
-            <div class="select-wrapper-group">
-                <div class="select-wrapper select-wrapper-half">
-                    <select name="date_from">
-                        <option value="0">-</option>
-                    </select>
-                </div>
-                <span class="hyphen">-</span>
-                <div class="select-wrapper select-wrapper-half">
-                    <select name="date_to">
-                        <option value="0">
-
-                            -
-                        </option>
-                    </select>
-                </div>
-            </div>
-            <div class="select-wrapper">
-                <select name="sport">
-                    <option value="0">All</option>
-                    {% for sport in sports %}
-                        <option value="{{ sport.id }}">{{ sport.name }}</option>
+    <div class="filter-column">
+        <div class="select-wrapper-group">
+            <div class="select-wrapper select-wrapper-half">
+                <select name="date_from">
+                    {% for i in -50..50 %}
+                        <option value="{{ "now"|date_modify( i ~" hour")|date('H:m d-m-Y') }}" {% if i == 0 %} selected {% endif %}>{{ "now"|date_modify( i ~" hour")|date('H:m d-m-Y') }}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div class="select-wrapper">
-                <select name="event-chain">
-                    <option value="0">All</option>
-                    {% for chain in event_chains %}
-                        <option value="{{ chain.id }}">{{ chain.name }}</option>
+            <span class="hyphen">-</span>
+            <div class="select-wrapper select-wrapper-half">
+                <select name="date_to">
+                    {% for i in -50..50 %}
+                        <option value="{{ "now"|date_modify( i ~" hour")|date('H:m d-m-Y') }}" {% if i == 0 %} selected {% endif %}>{{ "now"|date_modify( i ~" hour")|date('H:m d-m-Y') }}</option>
                     {% endfor %}
                 </select>
             </div>
         </div>
+        <div class="select-wrapper">
+            <select name="sport">
+                <option value="0">Sport</option>
+                {% for sport in sports %}
+                    <option value="{{ sport.id }}">{{ sport.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="select-wrapper">
+            <select name="event-chain">
+                <option value="0">Event</option>
+                {% for chain in event_chains %}
+                    <option value="{{ chain.id }}">{{ chain.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
     </div>
+    <div class="filter-column">
+        <div class="select-wrapper">
+            <select name="event-chain">
+                <option value="0">Coefficient type</option>
+                {% for type in coefficientTypes %}
+                    <option value="{{ type.id }}">{{ type.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="select-wrapper">
+            <select name="event-chain">
+                <option value="0">Coefficient type</option>
+                {% for type in coefficientTypes %}
+                    <option value="{{ type.id }}">{{ type.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+    </div>
+    <div class="filter-column right">
+        <input class="search-button" value="Search" type="button">
+    </div>
+    <div class="clear"></div>
 </div>
