--- a/web/assets/css/common/_header.scss
+++ b/web/assets/css/common/_header.scss
@@ -2,12 +2,11 @@
   width: 100%;
   height: 60px;
   background-color: $blue;
-}
-
-.nav .brand {
-  color: $white;
-  font-size: 30px;
-  padding: 10px;
-  display: inline-block;
-  @include playfair;
+  .brand {
+    color: $white;
+    font-size: 30px;
+    padding: 10px;
+    display: inline-block;
+    @include playfair;
+  }
 }
