--- a/web/assets/css/filter/_block.scss
+++ b/web/assets/css/filter/_block.scss
@@ -5,5 +5,15 @@
 }
 
 .filter-column {
-  max-width: 250px;
+  margin-right: 20px;
+  width: 250px;
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.clear {
+  clear: both;
 }
