--- a/web/assets/css/main.scss
+++ b/web/assets/css/main.scss
@@ -12,6 +12,7 @@
 /* сommon styles */
 @import 'common/buttons';
 @import 'common/select';
+@import 'common/range';
 
 @import 'common/footer';
 @import 'common/header';
