DEV-4: loader component added

--- a/src/AppBundle/Resources/views/Common/base.html.twig
+++ b/src/AppBundle/Resources/views/Common/base.html.twig
@@ -5,5 +5,6 @@
 {% include 'AppBundle:Common:header.html.twig' %}
 {% block content %}{% endblock %}
 {% include 'AppBundle:Common:footer.html.twig' %}
+<div id="popup"></div>
 </body>
 </html>
