--- a/web/assets/css/main.scss
+++ b/web/assets/css/main.scss
@@ -1,23 +1,25 @@
 /* variables */
-@import 'common/vars/path';
-@import 'common/vars/color';
+@import "common/vars/path";
+@import "common/vars/color";
 
 /* mixins */
-@import 'common/mixins/border-radius';
-@import 'common/mixins/box-shadow';
-@import 'common/mixins/box-sizing';
-@import 'common/mixins/inline-block';
-@import 'common/mixins/fonts';
+@import "common/mixins/border-radius";
+@import "common/mixins/box-shadow";
+@import "common/mixins/box-sizing";
+@import "common/mixins/background-clip";
+@import "common/mixins/inline-block";
+@import "common/mixins/fonts";
 
 /* сommon styles */
-@import 'common/buttons';
-@import 'common/select';
-@import 'common/range';
+@import "common/buttons";
+@import "common/select";
+@import "common/range";
+@import "common/footer";
+@import "common/header";
+@import "common/position";
 
-@import 'common/footer';
-@import 'common/header';
+@import "bet/row";
 
-@import 'bet/row';
-
-@import 'filter/block';
-@import 'filter/element';
+@import "filter/block";
+@import "filter/element";
+@import "popup/popup";
